--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Fragment Test</string>
+    <string name="app_name">Ybese</string>
     <string name="title_home">Market</string>
     <string name="title_dashboard">My Assets</string>
     <string name="title_notifications">Notifications</string>
